@@ -124,7 +124,8 @@
         \item correct wrong shift if the option \code{RF_nat.lim} was used,
         \item internal parameter added that allows to show the applied fit, while using \code{method = "SLIDE"},
         \item add argument \code{plot_reduced} for a better plot control,
-        \item support more standard R plot arguments.
+        \item argument \code{sequence.structure} renamed to \code{sequence_structure},
+        \item support further plot arguments via \code{...}.
 
       }
 
